# LawSummary

./: .gitignore  Instructions.txt  render.yaml
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/app/: config.py
backend/app/agents/: caselaw_agent.py  master_agent.py  prompts.py  statute_agent.py
backend/app/api/: routes.py
backend/app/core/: run_store.py  sse_manager.py
backend/app/models/: events.py  schemas.py
backend/app/services/: claude_client.py  courtlistener.py  leginfo_scraper.py
backend/scripts/: test_statutes.py
backend/test_cases/: palsgraf.json
frontend/: components.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/Archive/: ArchiveItem.tsx  ArchiveList.tsx
frontend/src/components/CaseInput/: CaseInputScreen.tsx  CaseTextArea.tsx  PasswordModal.tsx
frontend/src/components/Layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/components/Results/: CaseLawCard.tsx  CaseLawPanel.tsx  ResultsScreen.tsx  StatuteCard.tsx  StatutePanel.tsx  StreamingIndicator.tsx
frontend/src/context/: AppContext.tsx
frontend/src/hooks/: useArchive.ts  useCaseSubmission.ts  useSSE.ts  useTheme.ts
frontend/src/services/: api.ts
frontend/src/styles/: globals.css
frontend/src/types/: events.ts  index.ts
scripts/: dev.sh
